# prompt-optimization

./: .gitignore  DEPLOYMENT.md  Dockerfile.backend  README.md  README_AGENTS.md  README_JUDGE.md  bash.exe.stackdump  fly.backend.toml  migration.sql  optimization_result.json  test_optimizer.py  tmpclaude-67d1-cwd
.claude/: settings.json  settings.local.json
backend/: .env.example  fly.toml  pyproject.toml  requirements.txt  test.db  tmpclaude-62cf-cwd
backend/app/: auth.py  auth_utils.py  config.py  database.py  email.py  main.py  usage.py
backend/app/models/: __init__.py  agent_session.py  api_key.py  evaluation.py  feedback.py  membership.py  optimization.py  organization.py  prompt.py  referral.py  request.py  session.py  test.py  user.py  video.py  video_workflow.py
backend/app/routers/: __init__.py  admin.py  agents.py  auth.py  billing.py  logs.py  media_optimize_ws.py  optimize_ws.py  referral.py  requests.py  uploads.py  video.py  video_workflow.py
backend/app/schemas/: __init__.py  admin.py  agents.py  auth.py  billing.py  feedback.py  log.py  referral.py  video.py  video_workflow.py
backend/app/services/: __init__.py  file_processor.py  video_variant_generator.py
backend/app/services/video_workflow/: __init__.py  compiler.py  generator.py  mocks.py  scorer.py
backend/scripts/: add_prompt_library_columns.py  add_token_tracking_columns.py  seed_video_workflow.py
backend/tests/: conftest.py  test_agents_router.py  test_video_share_token.py  test_video_versioning.py
backend/tests/test_video_workflow/: __init__.py  test_compiler.py  test_scorer.py
sdk/: pyproject.toml
sdk/clarynt/: __init__.py  api.py  client.py
sdk/clarynt/evaluators/: base.py
sdk/promptlab/: __init__.py  api.py  client.py
sdk/promptlab/evaluators/: __init__.py  contains.py  judge.py
sdk/tests/: test_evaluators.py
(+121 files in other folders)
