[project]
name = "clarynt-backend"
version = "0.1.0"
description = "Clarynt API backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "openai>=2.11.0",
    "stripe>=8.0.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "cloudinary>=1.36.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
